--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "dependencies": {
     "normalize-url": "^1.3.0",
-    "url-regex": "^4.0.0"
+    "url-regex": "https://github.com/andela-cdike/url-regex/tarball/4236d5987eb1dd06903be6f76f8466d891191495"
   },
   "devDependencies": {
     "ava": "*",
